# exchange-rates

./: README.md  main.py  pyproject.toml  requirements.txt  тз.md
app/: crud.py  database.py  postgres
app/currencies/: dao.py  models.py  router.py  schemas.py
app/dao/: base_models.py
app/exchange/: dao.py  router.py  schemas.py
app/exchange_rates/: dao.py  models.py  router.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 38cbfb5b3aa1_add_exchange_rates.py  5108e9db5198_fix_types_in_currency.py  51a7f561327d_create_mcurrency.py
app/parser/: dao.py  router.py  schemas.py
