[tool.poetry]
name = "currency-exchange-3"
version = "0.1.0"
description = ""
authors = ["kudrmax <mdkudryashov@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
SQLAlchemy = "^2.0.31"
pydantic = "^2.8.2"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
